--- a/big-five.Rmd
+++ b/big-five.Rmd
@@ -492,25 +492,20 @@ female_subjects = bigfive[bigfive$sex == 2 ,]
 ```
 Zatim možemo usporediti srednje vrijednosti za 5 kategorija kako bi uočili po kojim karateristikama se naviše razlikuju spolovi:
 ```{r}
-cat('Srednja vrijednost neurocizma  za pripadnice muškog/ženskog spola je ', mean(female_subjects$neuroticism_score), mean(male_subjects$neuroticism_score),'\n')
+cat("Razlika između srednji vrijednosti:\n")
 
-cat('Varijanca vrijednost neurocizma  za pripadnice muškog/ženskog spola je ', var(female_subjects$neuroticism_score),var(male_subjects$neuroticism_score), '\n')
+srednja_vrijednost <- matrix(c(mean(female_subjects$neuroticism_score), mean(male_subjects$neuroticism_score),mean(female_subjects$extraversion_score), mean(male_subjects$extraversion_score),mean(female_subjects$agreeable_score), mean(male_subjects$agreeable_score),mean(female_subjects$conscientiousness_score), mean(male_subjects$conscientiousness_score),mean(female_subjects$openness_score), mean(male_subjects$openness_score)),ncol=2)
+colnames(srednja_vrijednost) <- c("Muškarci","Žene")
+rownames(srednja_vrijednost) <- c("neuroticism_score","extraversion_score","agreeable_score", "conscientiousness_score", "openness_score")
+srednja_vrijednost <- as.table(srednja_vrijednost)
+print(srednja_vrijednost)
 
-cat('Srednja vrijednost ekstraverzije  za pripadnice muškog/ženskog spola je ', mean(female_subjects$extraversion_score), mean(male_subjects$extraversion_score),'\n')
-
-cat('Varijanca vrijednost ekstraverzije  za pripadnice muškog/ženskog spola je ', var(female_subjects$extraversion_score),var(male_subjects$extraversion_score), '\n')
-
-cat('Srednja vrijednost Ugodnosti za pripadnice muškog/ženskog spola je ', mean(female_subjects$agreeable_score), mean(male_subjects$agreeable_score),'\n')
-
-cat('Varijanca vrijednost ugodnosti  za pripadnice muškog/ženskog spola je ', var(female_subjects$agreeable_score),var(male_subjects$agreeable_score), '\n')
-
-cat('Srednja vrijednost Savjesnosti za pripadnice muškog/ženskog spola je ', mean(female_subjects$conscientiousness_score), mean(male_subjects$conscientiousness_score),'\n')
-
-cat('Varijanca vrijednost Savjesnosti  za pripadnice muškog/ženskog spola je ', var(female_subjects$conscientiousness_score),var(male_subjects$conscientiousness_score), '\n')
-
-cat('Srednja vrijednost Otvorenosti  za pripadnice muškog/ženskog spola je ', mean(female_subjects$openness_score), mean(male_subjects$openness_score),'\n')
-
-cat('Varijanca vrijednost Otvorenosti  za pripadnice muškog/ženskog spola je ', var(female_subjects$openness_score),var(male_subjects$openness_score), '\n')
+cat("Razlika između varijanci:\n")
+varijance <- matrix(c(var(female_subjects$neuroticism_score), var(male_subjects$neuroticism_score),var(female_subjects$extraversion_score), var(male_subjects$extraversion_score),var(female_subjects$agreeable_score), var(male_subjects$agreeable_score),var(female_subjects$conscientiousness_score), var(male_subjects$conscientiousness_score),var(female_subjects$openness_score), var(male_subjects$openness_score)),ncol=2)
+colnames(varijance) <- c("Muškarci","Žene")
+rownames(varijance) <- c("neuroticism_score","extraversion_score","agreeable_score", "conscientiousness_score", "openness_score")
+varijance <- as.table(varijance)
+print(varijance)
 
 ```
 Nakon što usporedimo srednje vrijednosti prema svih 5 faktora, može se uočiti da između nekih postoji veća, odnosno manja razlika. Iako razlike nisu velike želimo ispitati da li je moguće procjeniti spol na temelju ovih faktora. Također najveća razlika se uočava između neurocizma, ugodnosti i otvorenosti. Dok je između savjesnosti i ekstraverzije gotovo zanemariva. Prikazali smo podatke grafički kako bi provjerili njihovu normalnost, te pokušali uočiti vizualne karakteristike.
